--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 
               </div>
               <div class="col-md-6">
-                  <h1 class="font-weight-bold pt-4" style="font-size: 65px;">Full Stack Developer in Google. <br>Entrepreneur</h1><br>
+                  <h1 class="font-weight-bold pt-4" style="text-decoration: underline; text-decoration-thickness: 1em; font-size: 65px">Hi, iam Shahad C K</h1> <br><h2>Entrepreneur, Full Stack Developer</h2><br>
                   <blockquote class="blockquote">
-                      <p><h4 class="font-italic">"There are many ways to get achievements.But you want to find it"</h4></p>
-                      <footer>`Shahad</footer>
+                      <p><h4 style="color: #a9a9a9;" class="font-italic">"There are many ways to get achievements.But you want to find it"</h4></p>
+                      <footer style="color: #a9a9a9;">`Shahad</footer>
                   </blockquote>
 
               </div>
