--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
               </div>
               <div class="col-md-6">
-                  <h1 class="font-weight-bold pt-4" style="text-decoration: underline; text-decoration-thickness: 1em; font-size: 65px">Hi, iam Shahad C K</h1> <br><h2>Entrepreneur, Full Stack Developer</h2><br>
+                  <h1 class="font-weight-bold pt-4" style="text-decoration-thickness: 1em; font-size: 65px">Hi, iam Shahad C K</h1> <br><h2>Entrepreneur, Full Stack Developer</h2><br>
                   <blockquote class="blockquote">
                       <p><h4 style="color: #a9a9a9;" class="font-italic">"There are many ways to get achievements.But you want to find it"</h4></p>
                       <footer style="color: #a9a9a9;">`Shahad</footer>
@@ -72,7 +72,7 @@
           <img class="card-img-top embed-responsive-item" src="front.jpg" alt="Card image cap" style="height: 10em;">
           <div class="card-body">
             <h5 class="card-title">FRONT END DEVELOPMENT</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
           <img class="card-img-top embed-responsive-item" src="back.jpg" alt="Card image cap" style="height: 10em;">
           <div class="card-body">
             <h5 class="card-title">BACK END DEVELOPMENT</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
@@ -90,7 +90,7 @@
           <img class="card-img-top" src="dbms.jpg" alt="Card image cap" style="height: 10em;" >
           <div class="card-body">
             <h5 class="card-title embed-responsive-item">DATABASE MANAGMENT</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
@@ -101,7 +101,7 @@
           <img class="card-img-top embed-responsive-item" src="marketing.jpg" alt="Card image cap" style="height: 10em;">
           <div class="card-body">
             <h5 class="card-title">MARKETING MANAGMENT</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
@@ -110,7 +110,7 @@
           <img class="card-img-top embed-responsive-item" src="hack.jpg" alt="Card image cap" style="height: 10em;">
           <div class="card-body">
             <h5 class="card-title">ETHICAL HACKING</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
           <img class="card-img-top embed-responsive-item" src="android.jpg" alt="Card image cap" style="height: 10em;">
           <div class="card-body">
             <h5 class="card-title">ANDROID APP DEVELOPMENT</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
