card text modified

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="dbms.jpg" alt="Card image cap" style="height: 10em;" >
           <div class="card-body">
-            <h5 class="card-title embed-responsive-item">DATABASE MANAGMENT</h5>
+            <h5 class="card-title embed-responsive-item">DATABASE<br> MANAGMENT</h5>
             <p class="card-text"></p>
           </div>
         </div>
@@ -109,7 +109,7 @@
         <div class="card" style="width: 18rem;">
           <img class="card-img-top embed-responsive-item" src="hack.jpg" alt="Card image cap" style="height: 10em;">
           <div class="card-body">
-            <h5 class="card-title">ETHICAL HACKING</h5>
+            <h5 class="card-title">ETHICAL<br> HACKING</h5>
             <p class="card-text"></p>
           </div>
         </div>
