--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="card" style="width: 18rem;">
           <img class="card-img-top embed-responsive-item" src="back.jpg" alt="Card image cap" style="height: 10em;">
           <div class="card-body">
-            <h5 class="card-title">BACK END DEVELOPMENT</h5>
+            <h5 class="card-title">BACK END<br> DEVELOPMENT</h5>
             <p class="card-text"></p>
           </div>
         </div>
